# browser-use-test-recorder

./: .env.example  README.md  STEEL_BROWSER_SETUP.md  pyproject.toml  start.py
browser_use_recorder/: __init__.py  server.py
browser_use_recorder/ui/: __init__.py
browser_use_recorder/ui/static/: interaction-recorder.js
browser_use_recorder/ui/templates/: index.html
